[tool.poetry]
name = "tsrange-scheduler"
version = "0.1.0"
description = "A scheduling system using PostgreSQL tsrange + GiST via SQLAlchemy"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
#packages = [{ include = "your_package_name" }]  # or remove if not using a package dir

[tool.poetry.dependencies]
python = "^3.10"  # or whatever version you're using
SQLAlchemy = "^2.0"
psycopg2-binary = "^2.9"
alembic = "^1.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
